# TurboXML

./: .clang-tidy  CMakeLists.txt  ChangeLog.md  README.md  TODO.txt
.github/workflows/: static-analysis.yml
include/: TurboXML.hh
test/: Helpers.hh  bench_TurboXML.cc  test_Conformance.cc  test_TurboXML.cc  test_XsdCodegen.cc  xsd_sample.xsd  xsd_sample_generated.hh
tools/: XsdCodegen.hh  xsdgen.cc
